# cmake_skeleton

./: CMakeLists.txt  readme.md
scripts/: run_tests.sh
tests/: CMakeLists.txt
